--- a/openapi/paths/resumes/mine.yaml
+++ b/openapi/paths/resumes/mine.yaml
@@ -11,10 +11,10 @@ get:
           schema:
             $ref: ../../components/schemas/resumes/mine.yaml
     '403':
-      description: Forbidden
+      description: если пользователь не авторизован
       content:
-        text/plain:
+        application/json:
           schema:
             type: string
-            example: pong
+            example: Forbidden
               
