refactoring: вынесение по файлам

--- a/openapi/paths/resumes/@{resume_id}.yaml
+++ b/openapi/paths/resumes/@{resume_id}.yaml
@@ -14,17 +14,6 @@ get:
           schema:
             $ref: ../../components/schemas/resumes/@{resume_id}.yaml
     '404':
-      description: если резюме не существует или недоступно пользователю
-      content:
-        application/json:
-          schema:
-            type: string
-            example: Not Found
+      $ref: ../../components/responses/404.yaml
     '403':
-      description: если пользователь не авторизован
-      content:
-        application/json:
-          schema:
-            type: string
-            example: Forbidden
-              
+      $ref: ../../components/responses/403.yaml
