--- a/openapi/paths/registration.yaml
+++ b/openapi/paths/registration.yaml
@@ -8,14 +8,14 @@ post:
     content:
       application/json:
         schema:
-          $ref: ../../components/requestBodies/User.yaml
+          $ref: ../components/requestBodies/User.yaml
   responses:
     '200':
       description: Успешная регистрация
       content:
         application/json:
           schema:
-            $ref: ../../components/schemas/accessToken.yaml
+            $ref: ../components/schemas/accessToken.yaml
     '406':
-      $ref: ../../components/responses/406.yaml
+      $ref: ../components/responses/406.yaml
               
